Fixing website width on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,7 +16,7 @@
   }
 
   .images{
-    /* opacity: 0; */
+    max-width: 100vw;
     position: fixed;
     top: 0;
     z-index: -1;
